# tafli

./: Cargo.toml  README.md
src/: main.rs  prev_move_info.rs  state.rs
src/api/: board_broadcast_server.rs  game_broadcast_server.rs  get_board.rs  get_game.rs  legal_moves.rs  make_move.rs  mod.rs
src/api/game_mgmt/: create_game.rs  game_mgmt.rs  join_game.rs  list_partial_games.rs  mod.rs  partial_game.rs
src/api/in_game/: game_broadcast_server.rs  get_game.rs  legal_moves.rs  make_move.rs  mod.rs
src/api/user_mgmt/: mod.rs  session_mgmt.rs
src/assets/: shield_wall_test.txt  tafl_board.txt  test_black_king_surround.txt  test_win_white_corner.txt
src/tafl/: board.rs  game.rs  game_move.rs  mod.rs
src/tafl/rules/: capture_rule.rs  mod.rs  rule.rs  shield_wall_rule.rs  win_black_surround_king.rs  win_white_corner.rs
tafli/: README.md  package-lock.json  package.json  vue.config.js
tafli/public/: index.html
tafli/src/: App.vue
tafli/src/components/: Board.vue  MetaView.vue  Navbar.vue
tafli/src/components/pages/: Home.vue  Learn.vue  NotFound.vue
tafli/src/components/pages/game/: Board.vue  Game.vue  MetaView.vue
tafli/src/ts/: board_configuration.js  board_configuration.ts  boarddata.ts  game.js  game.ts
