[package]
name = "tafli"
version = "0.0.1"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-files = "0.5.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8"
futures = "0.3"
