[package]
name = "tafli"
version = "0.0.1"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
actix-cors = "0.5"
lazy_static = "1.4.0"

rand = "0.7"
bytes = "0.5"
byteorder = "1.3"
futures = "0.3"
env_logger = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
